* working hours can now be specified as multiple periods
* various bugfixes
* init scripts for daemon
* thread pool for tcp connections should prevent memory exhaustion
* watchdog thread restarts the daemon if there is a memory leak

1.0.3
------
* updated documentation

1.0.4
------
* removed configuration overrides

1.0.5
----------------
* added 'filter', 'key_find_user' and 'key_set_user' to ldap authentication and configuration
* added complex filters which allow filtering by login name
* fixed delayed filter preview for hosts and services
* shortened host and service status in overview to reduce height of rows
* fixed and centered paginator in log view
* facelift
* updated documentation
* fixed some minor php warnings
* added default password for nagiosadmin
* removed logout button from setups w/o authentication

1.0.6
----------------
* added hostgroup include and exclude filter
* fixed messages containing ';' being truncated
* updated documentation

1.0.7 (current) - WORK IN PROGRESS
----------------
* added servicegroup include and exclude filter
* redid the notification rule's in contacts.pm
* fixed missing hostgroup column in the SQL files for upgrading/new installation
* added logic to sending notifications. A Contact will only get one notification per method, this to make it easier to make notification rules that may overlap, without spamming the contact excessively.
* added indexes to speed up MySQL performance 100 fold in setups with thousands of notifications.
* added $host_alias as a default value to notify with via email. Note that there currently as of Nagios 3.2.3 is a bug regarding hostalias not being updated in the retention.dat file. 
* now supports more than PROBLEM and RECOVERY notifications, added support for PROBLEM, RECOVERY, ACKNOWLEDGEMENT, FLAPPINGSTART, FLAPPINGSTOP, FLAPPINGDISABLED, DOWNTIMESTART, DOWNTIMEEND, DOWNTIMECANCELLED.
* added a sample apache noma.conf file under contrib/
* updated documentation