@@ -584,7 +584,7 @@ do
                     prepareNotification($cmdh{external_id}, $user, $method, 
 			$cmd, $dest, $from, $id, $cmdh{stime}, $cmdh{check_type}, $cmdh{status},
                         $cmdh{notification_type}, $cmdh{host}, $cmdh{host_alias}, $cmdh{host_address}, 
-			$cmdh{hostgroups}, $cmdh{service}, $cmdh{servicegroups}, $cmdh{output}, 
+			$cmdh{hostgroups}, $cmdh{service}, $cmdh{servicegroups}, $cmdh{authors}, $cmdh{comment}, $cmdh{output}, 
 			$contact->{rule});
                 }
             }
@@ -781,8 +781,8 @@ sub parseCommand
             	$cmdh{host_alias},      $cmdh{host_address}, 	$cmdh{hostgroups}, 
 		$cmdh{service},        	$cmdh{servicegroups},	$cmdh{check_type},
 	        $cmdh{status},    	$cmdh{stime},		$cmdh{notification_type}, 
-		$cmdh{output}
-        ) = split( ';', $cmd,13);
+                $cmdh{authors},         $cmdh{comment},         $cmdh{output}
+        ) = split( ';', $cmd,15);
 
         if ( $cmdh{external_id} eq '' or $cmdh{external_id} < 1 ) { $cmdh{external_id} = unique_id(); }
 
@@ -800,12 +800,12 @@ sub parseCommand
 
     if ( $cmd =~ /^notification;/i)
     {
-      $sql = sprintf('insert into tmp_commands (operation, external_id, host, host_alias, host_address, hostgroups, service, servicegroups, check_type, status, stime, notification_type, output) values (\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\')',
+      $sql = sprintf('insert into tmp_commands (operation, external_id, host, host_alias, host_address, hostgroups, service, servicegroups, check_type, status, stime, notification_type, authors, comment, output) values (\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\',\'%s\')',
                 $cmdh{operation},       $cmdh{external_id},     $cmdh{host},
                 $cmdh{host_alias},      $cmdh{host_address},    $cmdh{hostgroups},
                 $cmdh{service},         $cmdh{servicegroups},   $cmdh{check_type},
                 $cmdh{status},          $cmdh{stime},           $cmdh{notification_type},
-                $cmdh{output});
+		$cmdh{authors},		$cmdh{comment},         $cmdh{output});
 	  updateDB($sql);
     }
         return %cmdh;
@@ -878,7 +878,7 @@ sub prepareNotification
 {
 	my ($incident_id, $user, $method, $short_cmd, $dest, $from, $id,
 	$datetime, $check_type, $status,
-	$notification_type, $host, $host_alias, $host_address, $hostgroups, $service, $servicegroups, $output, $rule, $nodelay) = @_;
+	$notification_type, $host, $host_alias, $host_address, $hostgroups, $service, $servicegroups, $authors, $comment, $output, $rule, $nodelay) = @_;
 
 	# start of the notification
 	my $start = time();
@@ -899,6 +899,17 @@ sub prepareNotification
 	unless ( defined($dest) )
 	{
 	    $error .= ' Missing destination for notification belonging to: ' . $user;
+	}
+	if (($notification_type ne 'PROBLEM') or ($notification_type ne 'RECOVERY'))
+	{
+	    unless ( defined($authors) )
+	    {
+            	$error .= ' No authors of command: ' . $cmd;
+	    }
+	    unless ( defined($comment) )
+	    {
+            	$error .= ' No comment of command: ' . $cmd;
+            }
 	}
 
     if (defined($error))
@@ -1165,7 +1176,7 @@ sub getNextMethodCmd
 	    $dbResult{0}{timestamp},$dbResult{0}{check_type}, $dbResult{0}{status}, 
 	    $dbResult{0}{type}, $dbResult{0}{host},$dbResult{0}{host_alias}, 
 	    $dbResult{0}{host_address}, $dbResult{0}{hostgroups}, $dbResult{0}{service}, 
-	    $dbResult{0}{servicegroups}, $dbResult{0}{output});
+	    $dbResult{0}{servicegroups}, $dbResult{0}{authors},$dbResult{0}{comment}, $dbResult{0}{output});
     return $cline;
 
 }
