@@ -665,6 +665,8 @@ CREATE TABLE `tmp_commands` (
   `status` varchar(255) default NULL,
   `stime` int(11) default 0,
   `notification_type` varchar(255) default NULL,
+  `authors` varchar(255), default NULL,
+  `comment` varchar(255), default NULL,
   `output` varchar(4096) default NULL,
   UNIQUE KEY `id` (`id`)
 ) ENGINE=InnoDB DEFAULT CHARSET=latin1;
